@@ -2211,7 +2211,7 @@ bool clear_shroud(int side)
 size_t move_unit(move_unit_spectator *move_spectator,
 		 const std::vector<map_location> &route,
 		 replay* move_recorder, undo_list* undo_stack,
-		 bool /*show_move*/,
+		 bool show_move,
 		 map_location *next_unit, bool continue_move,
 		 bool should_clear_shroud, bool is_replay)
 {
@@ -2395,19 +2395,26 @@ size_t move_unit(move_unit_spectator *move_spectator,
 	if (next_unit != NULL)
 		*next_unit = steps.back();
 
-	//@todo reenable after setting proper invalidation rules
-	//if (show_move) {
+	if (show_move) {
 		// Move the unit on the screen. Hide the unit in its current location,
 		// but don't actually remove it until the move is done,
 		// so that while the unit is moving status etc.
 		// will still display the correct number of units.
 		unit_display::move_unit(steps,ui->second,teams);
-	//}
+	} else {
+		// not showing move but still need to invalidate changes
+		disp.invalidate(steps.front());
+		disp.invalidate(steps.back());
+	}
 
-	ui->second.set_movement(moves_left);
-
+	// move the real unit
 	units.move(ui->first, steps.back());
 	ui = units.find(steps.back());
+	ui->second.set_location(steps.back());
+	ui->second.set_movement(moves_left);
+	ui->second.set_standing();
+
+	disp.invalidate_unit_after_move(steps.front(), steps.back());
 	unit::clear_status_caches();
 
 	if(move_recorder != NULL) {
