@@ -1,6 +1,8 @@
 Version 1.7.5 +SVN:
  * Graphics:
    * New portrait for Merman Spearman
+ * Miscellaneous and bugfixes:
+   * Fix broken "Skip Ai moves" option.
 
 Version 1.7.5:
  * Campaigns:
